@@ -96,6 +96,7 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
 }
 
 tasks.register<Zip>("runtimeZipWinX64") {
